shared libraries changes files*