@@ -1,49 +1,109 @@
 package com.tcon.util;
 
-import org.apache.commons.lang3.StringUtils;
 import java.util.regex.Pattern;
 
+/**
+ * Utility class for common validation operations
+ */
 public class ValidationUtil {
 
-    private static final Pattern EMAIL_PATTERN =
-            Pattern.compile("^[A-Za-z0-9+_.-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$");
+    private static final Pattern EMAIL_PATTERN = Pattern.compile(
+            "^[A-Za-z0-9+_.-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$"
+    );
 
-    private static final Pattern PHONE_PATTERN =
-            Pattern.compile("^[+]?[(]?[0-9]{1,4}[)]?[-\\s\\.]?[(]?[0-9]{1,4}[)]?[-\\s\\.]?[0-9]{1,9}$");
+    private static final Pattern PHONE_PATTERN = Pattern.compile(
+            "^[+]?[(]?[0-9]{1,4}[)]?[-\\s.]?[(]?[0-9]{1,4}[)]?[-\\s.]?[0-9]{1,9}$"
+    );
+
+    private static final Pattern URL_PATTERN = Pattern.compile(
+            "^(https?|ftp)://[^\\s/$.?#].[^\\s]*$",
+            Pattern.CASE_INSENSITIVE
+    );
+
+    private ValidationUtil() {
+        // Private constructor to prevent instantiation
+    }
 
     /**
      * Validate email format
+     *
+     * @param email the email to validate
+     * @return true if valid, false otherwise
      */
     public static boolean isValidEmail(String email) {
-        return StringUtils.isNotBlank(email) && EMAIL_PATTERN.matcher(email).matches();
+        if (email == null || email.isBlank()) {
+            return false;
+        }
+        return EMAIL_PATTERN.matcher(email).matches();
     }
 
     /**
      * Validate phone number format
+     *
+     * @param phone the phone number to validate
+     * @return true if valid, false otherwise
      */
-    public static boolean isValidPhoneNumber(String phone) {
-        return StringUtils.isNotBlank(phone) && PHONE_PATTERN.matcher(phone).matches();
-    }
-
-    /**
-     * Check if string is not null or empty
-     */
-    public static boolean isNotEmpty(String str) {
-        return StringUtils.isNotBlank(str);
-    }
-
-    /**
-     * Validate password strength (min 8 chars, 1 uppercase, 1 lowercase, 1 number)
-     */
-    public static boolean isStrongPassword(String password) {
-        if (StringUtils.isBlank(password) || password.length() < 8) {
+    public static boolean isValidPhone(String phone) {
+        if (phone == null || phone.isBlank()) {
             return false;
         }
+        return PHONE_PATTERN.matcher(phone).matches();
+    }
 
-        boolean hasUpper = password.chars().anyMatch(Character::isUpperCase);
-        boolean hasLower = password.chars().anyMatch(Character::isLowerCase);
-        boolean hasDigit = password.chars().anyMatch(Character::isDigit);
+    /**
+     * Validate URL format
+     *
+     * @param url the URL to validate
+     * @return true if valid, false otherwise
+     */
+    public static boolean isValidUrl(String url) {
+        if (url == null || url.isBlank()) {
+            return false;
+        }
+        return URL_PATTERN.matcher(url).matches();
+    }
 
-        return hasUpper && hasLower && hasDigit;
+    /**
+     * Check if string is null or blank
+     *
+     * @param str the string to check
+     * @return true if null or blank, false otherwise
+     */
+    public static boolean isNullOrBlank(String str) {
+        return str == null || str.isBlank();
+    }
+
+    /**
+     * Check if string is not null and not blank
+     *
+     * @param str the string to check
+     * @return true if not null and not blank, false otherwise
+     */
+    public static boolean isNotBlank(String str) {
+        return str != null && !str.isBlank();
+    }
+
+    /**
+     * Validate that a number is within a range
+     *
+     * @param value the value to check
+     * @param min minimum value (inclusive)
+     * @param max maximum value (inclusive)
+     * @return true if within range, false otherwise
+     */
+    public static boolean isInRange(int value, int min, int max) {
+        return value >= min && value <= max;
+    }
+
+    /**
+     * Validate that a number is within a range
+     *
+     * @param value the value to check
+     * @param min minimum value (inclusive)
+     * @param max maximum value (inclusive)
+     * @return true if within range, false otherwise
+     */
+    public static boolean isInRange(double value, double min, double max) {
+        return value >= min && value <= max;
     }
 }
